--- a/media.css
+++ b/media.css
@@ -24,13 +24,13 @@
    }
    .main-box{
        width: 70%;
+       height: max-content;
    }
    .boxtext{
     margin-left: 0;
 }
 .picture{
    width: 100%;
-   height: 50%;
 }
 }
 @media (max-width:570px) {
